--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>Memorice</h1>
+      <h2 id="time"></h2>
     </header>
     <main>
       <section id="inicioJuego" class="inicioJuego">
